[package]
name = "netboard"
version = "0.1.0"
edition = "2021"

[dependencies]
evdev = "0.12"
tokio = { version = "1.40", features = ["full"] }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
